--- a/index.html
+++ b/index.html
@@ -5,6 +5,29 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>New Year New Me</title>
+        <!-- Main css link start -->
+        <link rel="stylesheet" href="styles/main.css" />
+        <!-- Main css link end -->
     </head>
-    <body></body>
+    <body>
+        <!-- header section start -->
+        <header class="banner">
+            <h1>All Thinks Are<br />Possible If You<br />believe</h1>
+            <p>
+                There are many variations of passages of Lorem Ipsum<br />
+                available, but the majority have suffered alteration in some<br />
+                form, by injected humour, or randomised words
+            </p>
+            <button class="but-contact-us">Contact Us</button>
+        </header>
+        <!-- header section end -->
+
+        <!-- Main section start -->
+        <main></main>
+        <!-- Main section end -->
+
+        <!-- Footer start -->
+        <footer></footer>
+        <!-- Footer end -->
+    </body>
 </html>
