Failures section added

--- a/index.html
+++ b/index.html
@@ -23,7 +23,30 @@
         <!-- header section end -->
 
         <!-- Main section start -->
-        <main></main>
+        <main>
+            <!-- failures section start -->
+            <section class="failures">
+                <div class="failures-photo">
+                    <img src="images/person.png" alt="" srcset="" />
+                </div>
+                <div class="failures-info">
+                    <h2>My failures of <br />previous year</h2>
+                    <p>
+                        Contrary to popular belief, Lorem Ipsum is not simply random text. It has
+                        roots in a piece of classical Latin literature from 45 BC, making it over
+                        2000 years old. Richard McClintock.
+                    </p>
+                    <ul>
+                        <li>Contrary to popular belief, is not simply.</li>
+                        <li>Contrary to popular belief.</li>
+                        <li>Contrary to popular , is not simply.</li>
+                        <li>Contrary to popular belief, is not simply.</li>
+                        <li>Contrary to popular simply.</li>
+                    </ul>
+                </div>
+            </section>
+            <!-- failures section end -->
+        </main>
         <!-- Main section end -->
 
         <!-- Footer start -->
