--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <!-- failures section start -->
             <section class="failures">
                 <div class="failures-photo">
-                    <img src="images/person.png" alt="" srcset="" />
+                    <img src="images/person.png" alt="" />
                 </div>
                 <div class="failures-info">
                     <h2>My failures of <br />previous year</h2>
@@ -46,6 +46,34 @@
                 </div>
             </section>
             <!-- failures section end -->
+
+            <!-- Plans section start -->
+            <section class="plans">
+                <h1>My Plans</h1>
+                <div class="plan-cart-container">
+                    <div class="plan-cart">
+                        <img src="images/icons/web.png" alt="" />
+                        <h3>Web Development</h3>
+                        <span>I want to start</span>
+                    </div>
+                    <div class="plan-cart">
+                        <img src="images/icons/js.png" alt="" />
+                        <h3>JavaScript</h3>
+                        <span>I want to start</span>
+                    </div>
+                    <div class="plan-cart">
+                        <img src="images/icons/smoke.png" alt="" />
+                        <h3>Smoking Habit</h3>
+                        <span>I want to start</span>
+                    </div>
+                    <div class="plan-cart">
+                        <img src="images/icons/ecom.png" alt="" />
+                        <h3>eCommerce</h3>
+                        <span>I want to start</span>
+                    </div>
+                </div>
+            </section>
+            <!-- Plans section end -->
         </main>
         <!-- Main section end -->
 
