Positive mindset added

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
             <!-- Plans section start -->
             <section class="plans">
-                <h1>My Plans</h1>
+                <h2>My Plans</h2>
                 <div class="plan-cart-container">
                     <div class="plan-cart">
                         <img src="images/icons/web.png" alt="" />
@@ -74,6 +74,13 @@
                 </div>
             </section>
             <!-- Plans section end -->
+
+            <!-- Positive mindset start -->
+            <section class="positive-mindset">
+                <h2>Always keep a positive mindset</h2>
+                <button class="btn-call-now">Call Now</button>
+            </section>
+            <!-- Positive mindset end -->
         </main>
         <!-- Main section end -->
 
