--- a/index.html
+++ b/index.html
@@ -85,7 +85,40 @@
         <!-- Main section end -->
 
         <!-- Footer start -->
-        <footer></footer>
+        <footer>
+            <div class="footer">
+                <div class="footer-info">
+                    <span>Future</span>
+                    <p>
+                        There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or
+                        randomised words.
+                        <br />
+                        <br />
+                        Email : info@email.com
+                        <br />
+                        Phone : 01500 00000000
+                    </p>
+                    <br />
+                    <div class="social-icons">
+                        <a class="social-icon" href="https://www.facebook.com"
+                            ><img src="images/icons/fb.png" alt="Facebook link icon"
+                        /></a>
+                        <a class="social-icon" href="https://twitter.com"
+                            ><img src="images/icons/twitter.png" alt="Twitter link icon"
+                        /></a>
+                        <a class="social-icon" href="https://www.youtube.com"
+                            ><img src="images/icons/youtube.png" alt="Youtube link icon"
+                        /></a>
+                    </div>
+                </div>
+                <div class="subscribe">
+                    <span>Subscribe</span>
+                    <input type="email" name="email" placeholder="Enter your email" />
+                    <button class="but-subscribe">Subscribe</button>
+                </div>
+            </div>
+        </footer>
         <!-- Footer end -->
     </body>
 </html>
