Portfolio section added

--- a/index.html
+++ b/index.html
@@ -81,6 +81,27 @@
                 <button class="btn-call-now">Call Now</button>
             </section>
             <!-- Positive mindset end -->
+
+            <!-- Portfolio start -->
+            <section class="portfolio">
+                <h2>My Amazing Works</h1>
+                <p>
+                    Most common methods for designing websites that work well on desktop is
+                    responsive and adaptive design
+                </p>
+                <div class="portfolio-container">
+                    <div class="portfolio-cart">
+                        <img src="images/portfolios/1.jpg" alt="" />
+                    </div>
+                    <div class="portfolio-cart">
+                        <img src="images/portfolios/3.jpg" alt="" />
+                    </div>
+                    <div class="portfolio-cart">
+                        <img src="images/portfolios/5.jpg" alt="" />
+                    </div>
+                </div>
+            </section>
+            <!-- Portfolio end -->
         </main>
         <!-- Main section end -->
 
