--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <!-- failures section start -->
             <section class="failures">
                 <div class="failures-photo">
-                    <img src="images/person.png" alt="" />
+                    <img src="images/person.png" alt="person image" />
                 </div>
                 <div class="failures-info">
                     <h2>My failures of <br />previous year</h2>
@@ -52,22 +52,22 @@
                 <h2>My Plans</h2>
                 <div class="plan-cart-container">
                     <div class="plan-cart">
-                        <img src="images/icons/web.png" alt="" />
+                        <img src="images/icons/web.png" alt="web image" />
                         <h3>Web Development</h3>
                         <span>I want to start</span>
                     </div>
                     <div class="plan-cart">
-                        <img src="images/icons/js.png" alt="" />
+                        <img src="images/icons/js.png" alt="js image" />
                         <h3>JavaScript</h3>
                         <span>I want to start</span>
                     </div>
                     <div class="plan-cart">
-                        <img src="images/icons/smoke.png" alt="" />
+                        <img src="images/icons/smoke.png" alt="smoke image" />
                         <h3>Smoking Habit</h3>
                         <span>I want to start</span>
                     </div>
                     <div class="plan-cart">
-                        <img src="images/icons/ecom.png" alt="" />
+                        <img src="images/icons/ecom.png" alt="eCommerce image" />
                         <h3>eCommerce</h3>
                         <span>I want to start</span>
                     </div>
